Quartz sync: Jul 11, 2024, 10:02 PM

--- a/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md
@@ -77,4 +77,118 @@ cssclasses:
 Достаточно подготовленный, Гайдо идёт к Поварихе. Она встречает его довольно радостно - вроде парень смелый, смышлёный. 
 
 ---
+## Подлежит редактуре
+
+Подготовка к отравлению
+Гайда готовит отравленное мясо, используя яд из пробирки.
+Он незаметно добавляет яд в мясо и прячет пробирку в рукаве.
+
+Отравление и последствия
+Гайда приносит отравленное мясо на банкетный стол.
+Повариха дает ему кисть, которая является ядовитой.
+Гайда использует кисть для отравления спрайтов в теплице.
+
+Подготовка к взрыву
+Гайда просит у тори бомбочку и использует ее для взрыва на втором этаже.
+Гайда открывает дверь магической рукой и закидывает бомбочку внутрь.
+
+##### тут боевика, вероятно надо много убрать
+Нейросеть YandexGPT сделала краткий пересказ видео
+Сессия 15.06.24 Часть 6
+Обсуждение способностей и действий
+Обсуждают способности и действия, связанные с аурой страха и крыльями.
+Упоминают, что способность видеть на расстоянии 10 футов может быть бредовой.
+
+Использование комплекта целителя
+Обсуждают использование комплекта целителя как большого зелья здоровья.
+Упоминают, что это возможно, но требует много времени.
+
+Гоблины и красная повариха
+Гоблины пытаются атаковать гайду, используя колющие и режущие предметы.
+Красная повариха смотрит на гайду и говорит, что он отправил кого-то.
+
+Битва с гоблинами
+Гайда получает удар по животу и кровотечение.
+Гоблин промахивается тесаком.
+Гайда использует магическую руку, чтобы открыть дверь и атаковать гоблина.
+
+Использование способностей
+Гайда использует пепел, чтобы нанести урон гоблину.
+Гайда использует божественную кару, чтобы нанести урон гоблину.
+
+Концентрация и временные хиты
+Гайда получает преимущество на выносливость и временные хиты.
+Гоблин пытается атаковать Гайда, но тот использует заклинание, чтобы отразить атаку.
+
+Битва с гоблинами
+Героиня сражается с гоблинами, используя различные заклинания и атаки.
+Она обсуждает с другими игроками, как лучше атаковать и уклоняться от атак.
+
+Волшебная стрела
+Героиня использует заклинание "волшебная стрела", которое наносит урон без цели.
+Она объясняет, что это заклинание не целится, а просто наносит урон.
+
+Метание копья
+Героиня обсуждает, как метать копье в гоблинов, учитывая их расположение и возможные помехи.
+Она также упоминает, что метание копья может прилететь по союзникам, если промахнется.
+
+Нейросеть YandexGPT сделала краткий пересказ видео
+Сессия 15.06.24 Часть 9
+Битва с гоблинами
+Руб использует психические клинки, чтобы ударить гоблина с тяжелым повреждением.
+Бардовское вдохновение можно использовать для бонусного действия.
+Руб телепортируется к гоблину и наносит урон.
+
+Использование оружия
+Руб решает использовать щит и молот.
+Щит имеет КД 20, так как это башенный щит.
+
+Спасброски и бардовское вдохновение
+Руб пытается сделать спасбросок смерти с помехой.
+Руб хочет использовать бардовское вдохновение на ксандре.
+
+Битва с гоблинами продолжается
+Руб защищает себя от гоблина, который отвлекает его.
+Руб наносит урон гоблину, который пытается его атаковать.
+Руб использует заклинание дальнобойное, чтобы нанести урон гоблину.
+
+Обсуждение стратегии и тактики
+Участники обсуждают использование кости, которая действует только в случае попадания и скила.
+Они также обсуждают, как использовать заготовленное действие, и как его можно использовать для лечения.
+
+Битва с каргой
+Участники обсуждают, как использовать клинок зеленого пламени, и как он работает.
+Они также обсуждают, как можно атаковать каргу и гоблина, и как это может повлиять на их здоровье.
+
+Завершение хода
+Участники обсуждают, как можно использовать перемещение, и как это может повлиять на их стратегию.
+Они также обсуждают, как можно ответить на вопросы других персонажей, и как это может повлиять на ход игры.
+
+Обсуждение стратегии и тактики
+В видео обсуждается стратегия и тактика в игре, включая использование преимуществ и выбор целей для атаки.
+Упоминается, что после получения преимущества, его можно использовать для атаки на конкретную цель.
+
+Завершение боя и обсуждение медицины
+В конце боя, обсуждается использование медицины для стабилизации и лечения персонажей.
+Упоминается черта "двойная медицина", которая позволяет использовать компоненты целителя для лечения.
+Обсуждается, что компоненты целителя стоят дороже, но могут быть использованы для улучшения состояния персонажей.
+
+
+Нейросеть YandexGPT сделала краткий пересказ видео
+Сессия 15.06.24 Часть 10
+Обсуждение способностей и заклинаний
+Обсуждение магического вдохновения, которое позволяет использовать кость бардовского вдохновения для нанесения дополнительного урона или восстановления здоровья.
+Гайда и Мира обсуждают, как использовать эту способность в бою.
+
+Сжигание руки и баррикады
+Гайда сжигает руку мертвой твари, которая пыталась отравить спрайтов.
+Руб и Гайда помогают Мирай подняться и уходят из комнаты.
+Руб замечает, что гоблин, который боялся Гайды, баррикадирует дверь.
+
+Завершение сцены
+Гайда и Мира уходят из комнаты, не обнаружив следов погрома.
+Обсуждается возможность продолжить игру или закончить сцену.
+В итоге, решают продолжить игру, но если все будут согласны.
+
+---
 >Следующая сессия: [[День 8. 50 лет спустя]] 
