--- a/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
+++ b/content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md
@@ -32,5 +32,161 @@ cssclasses:
 
 
 # Краткая сводка
+---
+## Подлежит редактуре
 
 
+Разговор о проблемах
+Герои обсуждают проблемы, связанные с отравлением и сатира.
+Гайда предлагает поджечь комнату, чтобы избавиться от сатиров.
+
+Решение проблем
+Герои обсуждают возможность поджога комнаты и использования снотворного для сатиров.
+Гайда предлагает обратиться к мисс Стори за помощью.
+
+Встреча с Сильване
+Герои встречаются с Сильване, которая предлагает помощь в решении проблем особняка.
+Гайда благодарит Сильване за информацию и обещает вернуть кольцо и отказаться от даров.
+
+Обсуждение ситуации
+Герои обсуждают ситуацию, в которой все разбрелись по кухне, и обсуждают, что делать с Александром, который пока без сознания.
+Руб использует песню отдыха для помощи раненым союзникам.
+
+Разговор с гоблином
+Герои обсуждают гоблина, который пытается открыть дверь и что-то делает за ней.
+Руб пытается выяснить, что он делает и зачем.
+
+Лечение Александра
+Герои обсуждают, как лечить Александра, и решают использовать набор целителя.
+Руб говорит, что она не врач, но доверяет набору целителя.
+
+Реакция на каргу
+Герои обсуждают реакцию Руб на каргу и ее последствия.
+Руб говорит, что Александр жив, но сильно пострадал.
+
+Разговор о времени и ушах
+Герои обсуждают, что они находятся на фейском плане, но их уши выглядят как у эльфов.
+Они обсуждают, что у всех, у кого острые уши, есть преимущество жизни на этом плане.
+
+Возвращение к жизни
+Герои обсуждают, что прошло много времени, и они скучают.
+Они обсуждают, что их друг Гайда правил на островах и захватил весь мир.
+
+Возвращение к жизни и разговор о времени
+Герои обсуждают, что они должны были остановить Балду, но не успели.
+Они обсуждают, что прошло много времени, и они не знают, что делать дальше.
+
+Возвращение к жизни и еда
+Герои обсуждают, что они должны поесть и попить после долгого времени без еды и воды.
+Они обсуждают, что Гайда правил на островах и захватил весь мир.
+
+Сессия 23.06 Часть 2
+
+00:02 Возвращение Гайда
+
+• Гайда просыпается после 50 лет комы и не постарел.
+• Гайда не понимает, как он смог проспать так долго.
+
+09:03 Разговор со спрайтами
+
+• Гайда и Мирай обсуждают возвращение на материальный план и необходимость разобраться с зеленым молодым драконом.
+• Гайда решает не обсуждать со спрайтами травы для сатиров и решает выпить вина.
+
+12:23 Вино и диалог
+
+• Гайда просит гоблина принести ему вина.
+• Гайда находит бочонок с вином и решает его выпить.
+• Гайда просыпается после выпивки и обнаруживает, что он снова в коме.
+
+17:02 Алкоголь и его воздействие
+
+• Персонаж расслабляется и не чувствует боли после употребления алкоголя.
+• Персонаж оценивает вкус вина как хороший.
+
+19:47 Рисование круга
+
+• Персонаж Гайда пытается нарисовать круг, используя оставшиеся жизненные силы.
+• Персонаж Тори помогает Гайде, используя магическую руку.
+
+21:08 Выпивка и разговоры
+
+• Персонажи Руб, Тори и Гайда пьют вино, но не для того, чтобы напиться, а для удовольствия.
+• Персонаж Гайда бухает культурно, в то время как персонаж Кса бухает некультурно.
+
+24:20 Выносливость и полет
+
+• Персонаж Кса выпивает бокал вина и теряет сознание, после чего слышит звук металла и падает на пол.
+
+25:36 Отдых и восстановление
+
+• Герои отдыхают после битвы с Баллом.
+• Гайда и Александра обсуждают, что они могут вернуться на материальный план, чтобы победить Балла.
+
+34:38 Отдых и восстановление
+
+• Герои обсуждают, как они могут отдохнуть и восстановить силы.
+• Руб бросает кубик отдыха, и остальные могут добавить дополнительные кости здоровья.
+
+40:00 Возвращение к материальному плану
+
+• Герои обсуждают, что они могут вернуться на материальный план несколько раз.
+• Александра находит рубин внутри камня, который она использовала для рисования.
+
+42:10 Проблемы и решения
+
+• Герои обсуждают, как решить проблемы, возникающие на материальном плане.
+• Они обсуждают возможность использования книги, которая может привести к непредсказуемым последствиям.
+
+45:57 Отдых и планы
+
+• Герои отдыхают и обсуждают свои планы на будущее.
+• Они обсуждают возможность обратиться к волшебнику, который может помочь с их проблемами.
+
+56:01 Попытка пробуждения
+
+• Герои пытаются разбудить Александра, используя различные методы.
+• Они обсуждают возможность использования поцелуя для пробуждения.
+
+01:01:16 Сон о гоблине
+
+• Во сне герой видит, как гоблин наклоняется к нему и целует его, при этом их языки соприкасаются.
+• Герой не испытывает отвращения к этому, так как это происходит во сне.
+
+01:11:44 Стражники и гоблин
+
+• Стражники прибегают на зов и видят, что герой обнимает гоблина и целует его.
+• Стражники пытаются снять героя с гоблина, но это не удается.
+• Герой пытается использовать атлетику с помехой, но это не помогает.
+
+Сессия 23.06 Часть 3
+
+00:01 Возвращение в особняк
+
+• Герои пытаются разбудить Александра, который был под действием гоблина.
+• Александр просыпается, но его состояние остается нестабильным.
+
+06:15 Проверка памяти
+
+• Герои проверяют память Александра, который помнит только часть своих снов.
+• Александр не помнит, что он делал с Руби.
+
+14:52 Возвращение в город
+
+• Герои возвращаются в город через портал, но обнаруживают, что они находятся в другом мире.
+• Герои пытаются использовать книгу, чтобы вернуться в свой мир, но не могут вспомнить точную формулировку.
+
+20:22 Обсуждение гайда
+
+• Леш и Гайда обсуждают, что они написали в гайде, и что они помнят из прошлого гайда.
+• Леш предлагает вернуться к началу гайда, где они обсуждали перемещение к Джарлаксу.
+
+24:17 Завершение игры
+
+• Леш и Тори обсуждают, что они хотят закончить игру, и что они хотят перенестись на материальный план.
+• Тори просит Леша перенести ее домой, и Леш использует кинжал, чтобы переместить ее.
+
+26:19 Завершение игры и обсуждение
+
+• Леш и Тори обсуждают, как они уйдут из игры, и Леш предлагает закончить на моменте орла.
+• Леш и Тори обсуждают, что они устали играть и хотят закончить игру.
+• Леш решает, что они закончат игру, и благодарит всех за участие.
