Quartz sync: Jul 12, 2024, 12:29 AM

--- a/content/Игры/Арканы.md
+++ b/content/Игры/Арканы.md
@@ -4,10 +4,10 @@ banner_y: 0.14797
 ---
 #### Шторм Короля Бурь 
 
-- [[Штейн]] - звезда
+- [[Орнштейн Аддер Айнхард]] - звезда
 - [[Азария]] - повешенный
 - [[Вик Гральт]]- эон
-- [[Магнус]] - солнце
+- [[Магнус Сорн]] - солнце
 - [[Скаэль]] - башня
 
 #### Врата Бальдура
