Quartz sync: Jul 12, 2024, 12:45 AM

--- a/content/Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md
+++ b/content/Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md
@@ -26,6 +26,132 @@ characters:
 cssclasses: dvl-c
 ---
 # Краткая сводка
+### Шторм 11.07.24 Часть 1
+
+00:00 Испытание и последствия
+
+• Героиня, опал, проходит испытание, в котором она должна определить камни, торчащие из ее головы.
+• Если она успешно проходит испытание, она получает половину своего максимального урона.
+• Если она не проходит испытание, она получает урон от ледяного взрыва.
+
+06:41 Ремонт дома
+
+• Героиня, молли, должна отремонтировать дом, используя магию.
+• Она использует магию для восстановления пола, который был поврежден.
+
+11:56 Выбор направления
+
+• Герои обсуждают, куда отправиться дальше.
+• Они могут отправиться к дворфам, тейцам или к их любимой зверушке.
+
+14:10 Разрыв связи
+
+• Героиня, опал, разрывает связь с теневым планом.
+• Она слышит, как ее собеседник говорит о небольшом поручении для нее.
+
+17:55 Обсуждение глаз и алкоголя
+
+• Герои обсуждают, что они не потолстели после путешествия, но могут набрать немного мышц.
+• Они решают, что нужно заменить глаз в шкатулке на другой, и обсуждают, какой глаз нужен мистеру Ведро.
+• Герои решают, что нужно дать мистеру Ведро голубой глаз, и обсуждают, как это сделать.
+
+30:47 Алкоголь и эксперименты
+
+• Герои проводят эксперимент с алкоголем, выливая его на снег и наблюдая за реакцией.
+• Они обнаруживают, что алкоголь не взрывается, но вызывает шатание у отречи.
+• Герои обсуждают, как использовать алкоголь в бою, и решают провести еще эксперименты.
+
+37:18 Обсуждение припасов и невидимости
+
+• Обсуждают, где находятся припасы и как их использовать.
+• Упоминают невидимость и как она работает.
+
+44:36 Отдых и планы на следующий день
+
+• Решают отдохнуть и обсудить планы на следующий день.
+• Обсуждают возможность использования невидимости для охоты.
+
+51:12 Холодильник и бытовая техника
+
+• Обсуждают холодильники и бытовую технику, в частности, холодильники Xiaomi.
+• Решают отложить обсуждение до более подходящего времени.
+
+53:58 Отдых и медитация
+
+• Герои обсуждают сервис в бане и решают отдохнуть.
+• Магнус и Азар отдыхают, а Вик просыпается и наблюдает за ними.
+
+01:00:53 Пробуждение и обсуждение
+
+• Вик просыпается и видит Магнуса и Азара, которые отдыхают в бане.
+• Магнус обсуждает с Виком, что они все отдохнули и готовы к действиям.
+
+01:03:23 Изучение книги
+
+• Вик изучает книгу, а Магнус обсуждает с ней, что они будут изучать в первую очередь.
+
+### Шторм 11.07.24 Часть 2
+
+00:02 Обсуждение фамильяров и их способностей
+
+• Обсуждение того, как укрепить связь с покровителем и получить больше сил через фамильяра.
+• Уточнение порядка применения ингредиентов для укрепления связи.
+
+09:24 Поиск еды и охота
+
+• Магнус превращается в снежного кота и отправляется на охоту.
+• Поиск еды и попытка завалить небольшого оленя или другое животное.
+
+13:08 Атака на зайцев
+
+• Магнус нападает на зайцев, используя преимущество скрытности и внезапности.
+• Успешная атака на одного из зайцев.
+
+14:44 Охота на зайцев
+
+• Героиня пытается поймать зайцев, используя различные методы.
+• Она пытается поймать зайцев, не убивая их, и просит своего друга Магнуса помочь ей.
+
+22:08 Возвращение в башню
+
+• Героиня возвращается в башню с добычей.
+• Герои обсуждают, как они будут использовать добычу.
+
+29:08 Тренировка и охота
+
+• Героиня и Магнус отправляются на охоту.
+• Героиня предлагает использовать охоту в качестве тренировки.
+
+30:58 Встреча с диким обликом
+
+• Герои встречают дикого облика, который оказывается магнусом.
+• Магнус превращается в кошку, на которой сидит царе.
+
+43:11 Поиск добычи
+
+• Герои ищут добычу, но не находят ничего.
+• Магнус пытается выманить белок из дупла.
+
+48:32 Отдых и восстановление
+
+• Герои отдыхают в сауне, но истощение не снимается.
+• Азар может докинуть до 12 временных хитов.
+
+50:42 Азарт и его общение с кошкой
+
+• Азарт просыпается и осматривает кота, который лежит на столе.
+• Он пытается издать подобие рыка, чтобы показать свое доминирование.
+
+56:11 Азарт и его взаимодействие с другими персонажами
+
+• Азарт предлагает Вике и Азар заняться разделкой зайцев.
+• Вика готовит чай, а Азара разделывает зайцев.
+
+01:00:02 Азарт и его выживание
+
+• Азара записывает выживание на разделку зайцев.
+• Вика начинает мариновать зайцев в специях и разделывать кости.
+
 
 
 
