Quartz sync: Aug 15, 2024, 10:03 PM

--- a/content/Игры/Врата Бальдура/Хроники Врат Бальдура.md
+++ b/content/Игры/Врата Бальдура/Хроники Врат Бальдура.md
@@ -22,3 +22,6 @@
 |[[День 8. Ссора карги и русалки]]|05.04.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- [[Стуктина]]<br>- [[Эрнива]]<br>- Спрайты|- [[Поместье Рейвентри]]<br>- План фей|
 |[[День 8. Новая фея и злость Поварихи]]|15.06.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- [[Шамбли]]<br>- [[Красная повариха]]<br>- Сатиры<br>- Спрайты|- [[Поместье Рейвентри]]<br>- План фей|
 |[[День 8. 50 лет спустя]]|23.06.2024|- year: 1483<br>- month: 1<br>- day: 8|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- Спрайты|- [[Поместье Рейвентри]]<br>- [[Врата Бальдура]]<br>- [[Нижний город]]<br>- План фей<br>- Материальный план|
+|[[День 9. Званный ужин у семьи Кляйн и снова в особняк]]|27-07-2024|- year: 1483<br>- month: 1<br>- day: 9|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Коран]]<br>- [[Фауст Кляйн]]<br>- [[Джинджер]]|- [[Врата Бальдура]]<br>- [[Поместье Рейвентри]]|
+|[[День 10. Межпланарное зеркало]]|30-07-2024|- year: 1483<br>- month: 1<br>- day: 10|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]|- [[Поместье Рейвентри]]|
+|[[День 10.  Завершение миссий Сэдии]]|08-08-2024|- year: 1483<br>- month: 1<br>- day: 10|- [[Гайдо Алигьери]]<br>- [[Ксандр]]<br>- [[Мирай Стелмейн]]<br>- [[Руб]]<br>- [[Тори Кляйн]]<br>- [[Сэдия]]<br>- [[Вудфеллоу]]<br>- Спрайты|- [[Поместье Рейвентри]]<br>- План фей|
