Quartz sync: Aug 15, 2024, 10:18 PM

--- a/content/Действующие лица/Поместье Рейвентри/Вудфеллоу.md
+++ b/content/Действующие лица/Поместье Рейвентри/Вудфеллоу.md
@@ -4,6 +4,7 @@ type: Персонаж
 location:
   - "[[Поместье Рейвентри]]"
   - План фей
+  - Летний двор
 race:
   - Фея
   - Дерево
@@ -11,4 +12,4 @@ gender: Неизвестно
 organisation: 
 dead: 
 ---
-Библиотекарь, все стеллажи будто являются частью его корней
+Библиотекарь, все стеллажи будто являются частью его корней. Его корни простираются по всему плану фей.
