--- a/content/Действующие лица/Поместье Рейвентри/Кернерос.md
+++ b/content/Действующие лица/Поместье Рейвентри/Кернерос.md
@@ -11,4 +11,4 @@ race:
   - Неизвестно
 gender: 
 ---
-Обитатель этого места ещё до попадания на план фей особняка.  Телохранитель с [[Элсиет Колвинар]].
+Обитатель этого места ещё до попадания на план фей особняка.  Телохранитель с [[Элсиет Корвинар]].
