--- a/content/Действующие лица/Поместье Рейвентри/Перриус Аннматар.md
+++ b/content/Действующие лица/Поместье Рейвентри/Перриус Аннматар.md
@@ -11,7 +11,7 @@ race:
   - Призрак
 gender: М
 ---
-Двоюродный брат [[Иллана Колвинар|Илланы]]. 
+Двоюродный брат [[Иллана Корвинар|Илланы]]. 
 
 *Сказано в слух **Тори**:*
 Прибыл из замка в [[Тетир|Тетире]]. Там его торговое предприятие. Занимаются специями и сухофруктами. Поставляют по всему Побережью Мечей. Во Вратах тоже торговали под своим именем.
