Quartz sync: Aug 17, 2024, 3:14 AM

--- a/content/Материалы/Скрипты/Обновление таблиц.md
+++ b/content/Материалы/Скрипты/Обновление таблиц.md
@@ -12,7 +12,7 @@ const fileAndQuery = new Map([
   ],
   [
     "Готовые статьи",
-    'List From "content/Лор" Sort file.folder asc Sort file.name asc',
+    'Table type as "Вид" Where type Sort type asc',
   ],
   [
     "Известные личности",
