--- a/content/Материалы/Таблицы/Готовые статьи.md
+++ b/content/Материалы/Таблицы/Готовые статьи.md
@@ -1,67 +1,85 @@
-- [[content/Лор/Организации/Альянс лордов.md|Альянс лордов]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Бальдурские Ворота (заполнить).md|Бальдурские Ворота (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Башня Рамазита (заполнить).md|Башня Рамазита (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md|Быт юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md|Верхний город]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md|Верховный Констебль и Мастер над стенами (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md|Виды юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md|Внешний город (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Восточный Путь (заполнить).md|Восточный Путь (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Врата Бальдура.md|Врата Бальдура]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Дом Чудес (заполнить).md|Высший Дом Чудес (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md|Высший Зал]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Вьющийся Заговор.md|Вьющийся Заговор]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Герои Шири (заполнить).md|Герои Шири (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Гильдия.md|Гильдия]]
-- [[content/Лор/Организации/Врата Бальдура/Дозор.md|Дозор]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Дженестас.md|Дом Дженестас]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Саурингар.md|Дом Саурингар]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md|Дом Се'Сехен]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md|Дом Ссерадесс]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md|Дом Хсс'тафи]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Экстаминос.md|Дом Экстаминос]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Эселемас.md|Дом Эселемас]]
-- [[content/Лор/Организации/Жентарим.md|Жентарим]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Законы.md|Законы]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md|Зал Чудес]]
-- [[content/Лор/Существа/Иллитиды.md|Иллитиды]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md|Корабль Аларика]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы (заполнить).md|Крепостные Улицы (заполнить)]]
-- [[content/Лор/Артефакты/Криншинибон.md|Криншинибон]]
-- [[content/Лор/Организации/Легион Смерти.md|Легион Смерти]]
-- [[content/Лор/Локации/Лускан.md|Лускан]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Водными и Подземными Путями.md|Мастер над Водными и Подземными Путями]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md|Мастер над Монетой]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Мостовыми (заполнить).md|Мастер над Мостовыми (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Морская Башня Бальдурана (заполнить).md|Морская Башня Бальдурана (заполнить)]]
-- [[content/Лор/Локации/Невервинтер.md|Невервинтер]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md|Нижний город (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md|Общество юань-ти]]
-- [[content/Лор/Локации/Острова Муншае.md|Острова Муншае]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Парламент Пэров.md|Парламент Пэров]]
-- [[content/Лор/Локации/Поместье Рейвентри.md|Поместье Рейвентри]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Порт Ньянзару (заполнить).md|Порт Ньянзару (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Порядок.md|Порядок]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Правительство Врат Бальдура.md|Правительство Врат Бальдура]]
-- [[content/Лор/События/Праздник Высокого Урожая.md|Праздник Высокого Урожая]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Пристав Шири.md|Пристав Шири]]
-- [[content/Лор/Организации/Врата Бальдура/Пылающий Кулак.md|Пылающий Кулак]]
-- [[content/Лор/Существа/Чешуйчатые/Саррукхи/Расовая история саррукхов.md|Расовая история саррукхов]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Расовая история юань-ти.md|Расовая история юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Родовые поместья (заполнить).md|Родовые поместья (заполнить)]]
-- [[content/Лор/Организации/Культы/Рыцари Щита.md|Рыцари Щита]]
-- [[content/Лор/Существа/Чешуйчатые/Саррукхи/Саррукхи.md|Саррукхи]]
-- [[content/Лор/Организации/Врата Бальдура/Свита Леди.md|Свита Леди]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Совет Четырёх.md|Совет Четырёх]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md|Статуя Возлюбленного Странника]]
-- [[content/Лор/Локации/Тетир.md|Тетир]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Три старых бочонка (заполнить).md|Три старых бочонка (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md|Управляющий Портом]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Форт Белуариан (заполнить).md|Форт Белуариан (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал.md|Храмовый квартал]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы/Цитадель Дозора (заполнить).md|Цитадель Дозора (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Чионтар (заполнить).md|Чионтар (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шесть Мудрых Механиков (заполнить).md|Шесть Мудрых Механиков (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md|Ширь]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шлем и Плащ (заполнить).md|Шлем и Плащ (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти.md|Юань-ти]]
+| File                                                                                                                                                                   | Вид         |
+| ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------- |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Законы.md\|Законы]]                                                                                             | Информация  |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Порядок.md\|Порядок]]                                                                                           | Информация  |
+| [[content/Лор/Существа/Чешуйчатые/Саррукхи/Расовая история саррукхов.md\|Расовая история саррукхов]]                                                                   | Информация  |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md\|Быт юань-ти]]                                                                                                | Информация  |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md\|Виды юань-ти]]                                                                                              | Информация  |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md\|Общество юань-ти]]                                                                                      | Информация  |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти.md\|Юань-ти]]                                                                                                                | Информация  |
+| [[content/Материалы/Шаблоны/Информация.md\|Информация]]                                                                                                                | Информация  |
+| [[content/Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]                                                                                   | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md\|Зал Чудес]]                                                                   | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md\|Высший Зал]]                                                                 | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md\|Статуя Возлюбленного Странника]]                                     | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md\|Ширь]]                                                                                              | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]                                                                                               | Локация     |
+| [[content/Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]                                                                                | Локация     |
+| [[content/Лор/Локации/Лускан.md\|Лускан]]                                                                                                                              | Локация     |
+| [[content/Лор/Локации/Невервинтер.md\|Невервинтер]]                                                                                                                    | Локация     |
+| [[content/Лор/Локации/Острова Муншае.md\|Острова Муншае]]                                                                                                              | Локация     |
+| [[content/Лор/Локации/Поместье Рейвентри.md\|Поместье Рейвентри]]                                                                                                      | Локация     |
+| [[content/Лор/Локации/Тетир.md\|Тетир]]                                                                                                                                | Локация     |
+| [[content/Материалы/Шаблоны/Локация.md\|Локация]]                                                                                                                      | Локация     |
+| [[content/Лор/Организации/Врата Бальдура/Гильдия.md\|Гильдия]]                                                                                                         | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md\|Верховный Констебль и Мастер над стенами (заполнить)]] | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Водными и Подземными Путями.md\|Мастер над Водными и Подземными Путями]]                             | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md\|Мастер над Монетой]]                                                                     | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Мостовыми (заполнить).md\|Мастер над Мостовыми (заполнить)]]                                         | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Парламент Пэров.md\|Парламент Пэров]]                                                                           | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Правительство Врат Бальдура.md\|Правительство Врат Бальдура]]                                                   | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Пристав Шири.md\|Пристав Шири]]                                                                                 | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Совет Четырёх.md\|Совет Четырёх]]                                                                               | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md\|Управляющий Портом]]                                                                     | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Дозор.md\|Дозор]]                                                                                                             | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Пылающий Кулак.md\|Пылающий Кулак]]                                                                                           | Организация |
+| [[content/Лор/Организации/Врата Бальдура/Свита Леди.md\|Свита Леди]]                                                                                                   | Организация |
+| [[content/Лор/Организации/Альянс лордов.md\|Альянс лордов]]                                                                                                            | Организация |
+| [[content/Лор/Организации/Жентарим.md\|Жентарим]]                                                                                                                      | Организация |
+| [[content/Лор/Организации/Культы/Рыцари Щита.md\|Рыцари Щита]]                                                                                                         | Организация |
+| [[content/Лор/Организации/Легион Смерти.md\|Легион Смерти]]                                                                                                            | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Вьющийся Заговор.md\|Вьющийся Заговор]]                                                                          | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Дженестас.md\|Дом Дженестас]]                                                                                | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Саурингар.md\|Дом Саурингар]]                                                                                | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md\|Дом Се'Сехен]]                                                                                  | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md\|Дом Ссерадесс]]                                                                                | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md\|Дом Хсс'тафи]]                                                                                  | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Эселемас.md\|Дом Эселемас]]                                                                                  | Организация |
+| [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Экстаминос.md\|Дом Экстаминос]]                                                                              | Организация |
+| [[content/Материалы/Шаблоны/Организация.md\|Организация]]                                                                                                              | Организация |
+| [[content/Материалы/Шаблоны/Персонаж.md\|Персонаж]]                                                                                                                    | Персонаж    |
+| [[content/Игры/Врата Бальдура/Текста/Обуглянный клочок бумаги в камине.md\|Обуглянный клочок бумаги в камине]]                                                         | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/О создании арканной  связи.md\|О создании арканной  связи]]                                                                       | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/Первое задание из печенья.md\|Первое задание из печенья]]                                                                         | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/Письмо дома №2.md\|Письмо дома №2]]                                                                                               | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/Письмо дома №1.md\|Письмо дома №1]]                                                                                               | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/Письмо дома №3.md\|Письмо дома №3]]                                                                                               | Текста      |
+| [[content/Игры/Врата Бальдура/Текста/Письмо из Муншая.md\|Письмо из Муншая]]                                                                                           | Текста      |
+| [[content/Материалы/Шаблоны/Текста.md\|Текста]]                                                                                                                        | Текста      |
+| [[content/index.md\|index]]                                                                                                                                            | Хаб         |
+| [[content/Игры/Врата Бальдура/Хроники/День 1. Возрождение.md\|День 1. Возрождение]]                                                                                    | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 10.  Завершение миссий Сэдии.md\|День 10.  Завершение миссий Сэдии]]                                                        | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 10. Межпланарное зеркало.md\|День 10. Межпланарное зеркало]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 2. Путешествие по планам.md\|День 2. Путешествие по планам]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 3. Загадочная миска, Баал и суматоха.md\|День 3. Загадочная миска, Баал и суматоха]]                                        | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 4. Встреча с мистером Печенькой.md\|День 4. Встреча с мистером Печенькой]]                                                  | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 4. Падение псевдо-капитана.md\|День 4. Падение псевдо-капитана]]                                                            | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 5. Заражение и новый дом.md\|День 5. Заражение и новый дом]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 4. Убийство дворфийки и уборщика.md\|День 4. Убийство дворфийки и уборщика]]                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 5. Освобождение из камня.md\|День 5. Освобождение из камня]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 5. Пиратская засада.md\|День 5. Пиратская засада]]                                                                          | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 5. Погоня и пустынный остров.md\|День 5. Погоня и пустынный остров]]                                                        | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 6. Банкетный зал и мозги.md\|День 6. Банкетный зал и мозги]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 6. Материальный план и желания.md\|День 6. Материальный план и желания]]                                                    | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 7. Корабль и возвращение к началу.md\|День 7. Корабль и возвращение к началу]]                                              | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 7. Привычная обстановка.md\|День 7. Привычная обстановка]]                                                                  | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. 50 лет спустя.md\|День 8. 50 лет спустя]]                                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Дом с призраками.md\|День 8. Дом с призраками]]                                                                          | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Новая фея и злость Поварихи.md\|День 8. Новая фея и злость Поварихи]]                                                    | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Особняк на плане фей.md\|День 8. Особняк на плане фей]]                                                                  | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Сатиры, Повариха и Библиотека.md\|День 8. Сатиры, Повариха и Библиотека]]                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Сбор у Корана.md\|День 8. Сбор у Корана]]                                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 8. Ссора карги и русалки.md\|День 8. Ссора карги и русалки]]                                                                | Хроники     |
+| [[content/Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md\|День 9. Званный ужин у семьи Кляйн и снова в особняк]]                  | Хроники     |
+| [[content/Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md\|Камни, охота и передача глаза]]                                                             | Хроники     |
+| [[content/Материалы/Шаблоны/Хроники Врата.md\|Хроники Врата]]                                                                                                          | Хроники     |
