Quartz sync: Aug 17, 2024, 3:23 AM

--- a/content/Материалы/Скрипты/Обновление таблиц.md
+++ b/content/Материалы/Скрипты/Обновление таблиц.md
@@ -3,12 +3,12 @@ const dv = app.plugins.plugins["dataview"].api;
 
 const fileAndQuery = new Map([
   [
-    "Last 3 sessions",
-    'TABLE date AS "Дата игры", fc-date AS "Дата в игре" From "content/Игры/Врата Бальдура/Хроники" SORT sessionNum DESC Limit 3',
-  ],
+    "Последние 3 записи хроники",
+    'TABLE date AS "Дата игры", fc-date AS "Дата в игре" From "Игры/Врата Бальдура/Хроники" SORT sessionNum DESC Limit 3',
+  ], 
   [
     "Все персонажи игроков",
-    'Table date AS "Дата игры", fc-date AS "Дата в игре" From "content/Игры/Врата Бальдура/Хроники" SORT sessionNum DESC Limit 3',
+    'Table date AS "Дата игры", fc-date AS "Дата в игре" From "Игры/Врата Бальдура/Хроники" SORT sessionNum DESC Limit 3',
   ],
   [
     "Готовые статьи",
@@ -16,15 +16,15 @@ const fileAndQuery = new Map([
   ],
   [
     "Известные личности",
-    'Table location as "Местонахождение" From "content/Действующие лица" Where !dead Sort file.folder asc Sort location desc',
+    'Table location as "Местонахождение" From "Действующие лица" Where !dead Sort file.folder asc Sort location desc',
   ],
   [
     "Другие статьи",
-    'List From "content/Лор" Sort file.folder ascSort file.name asc',
+    'List From "Лор" Sort file.folder ascSort file.name asc',
   ],  
   [
     "Хроники Врат Бальдура",
-    'Table date AS "Дата игры", fc-date AS "Дата в игре",characters as "Участники", location as "Локации" From "content/Игры/Врата Бальдура/Хроники" SORT sessionNum asc',
+    'Table date AS "Дата игры", fc-date AS "Дата в игре",characters as "Участники", location as "Локации" From "Игры/Врата Бальдура/Хроники" SORT sessionNum asc',
   ], 
 ]);
 
