--- a/content/Материалы/Таблицы/Другие статьи.md
+++ b/content/Материалы/Таблицы/Другие статьи.md
@@ -1,67 +1,67 @@
-- [[content/Лор/Организации/Альянс лордов.md|Альянс лордов]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Бальдурские Ворота (заполнить).md|Бальдурские Ворота (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Башня Рамазита (заполнить).md|Башня Рамазита (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md|Быт юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md|Верхний город]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md|Верховный Констебль и Мастер над стенами (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md|Виды юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md|Внешний город (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Восточный Путь (заполнить).md|Восточный Путь (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Врата Бальдура.md|Врата Бальдура]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Дом Чудес (заполнить).md|Высший Дом Чудес (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md|Высший Зал]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Вьющийся Заговор.md|Вьющийся Заговор]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Герои Шири (заполнить).md|Герои Шири (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Гильдия.md|Гильдия]]
-- [[content/Лор/Организации/Врата Бальдура/Дозор.md|Дозор]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Дженестас.md|Дом Дженестас]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Саурингар.md|Дом Саурингар]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md|Дом Се'Сехен]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md|Дом Ссерадесс]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md|Дом Хсс'тафи]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Экстаминос.md|Дом Экстаминос]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Эселемас.md|Дом Эселемас]]
-- [[content/Лор/Организации/Жентарим.md|Жентарим]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Законы.md|Законы]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md|Зал Чудес]]
-- [[content/Лор/Существа/Иллитиды.md|Иллитиды]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md|Корабль Аларика]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы (заполнить).md|Крепостные Улицы (заполнить)]]
-- [[content/Лор/Артефакты/Криншинибон.md|Криншинибон]]
-- [[content/Лор/Организации/Легион Смерти.md|Легион Смерти]]
-- [[content/Лор/Локации/Лускан.md|Лускан]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Водными и Подземными Путями.md|Мастер над Водными и Подземными Путями]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md|Мастер над Монетой]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Мастер над Мостовыми (заполнить).md|Мастер над Мостовыми (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Морская Башня Бальдурана (заполнить).md|Морская Башня Бальдурана (заполнить)]]
-- [[content/Лор/Локации/Невервинтер.md|Невервинтер]]
-- [[content/Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md|Нижний город (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md|Общество юань-ти]]
-- [[content/Лор/Локации/Острова Муншае.md|Острова Муншае]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Парламент Пэров.md|Парламент Пэров]]
-- [[content/Лор/Локации/Поместье Рейвентри.md|Поместье Рейвентри]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Порт Ньянзару (заполнить).md|Порт Ньянзару (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Порядок.md|Порядок]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Правительство Врат Бальдура.md|Правительство Врат Бальдура]]
-- [[content/Лор/События/Праздник Высокого Урожая.md|Праздник Высокого Урожая]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Пристав Шири.md|Пристав Шири]]
-- [[content/Лор/Организации/Врата Бальдура/Пылающий Кулак.md|Пылающий Кулак]]
-- [[content/Лор/Существа/Чешуйчатые/Саррукхи/Расовая история саррукхов.md|Расовая история саррукхов]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти/Расовая история юань-ти.md|Расовая история юань-ти]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Родовые поместья (заполнить).md|Родовые поместья (заполнить)]]
-- [[content/Лор/Организации/Культы/Рыцари Щита.md|Рыцари Щита]]
-- [[content/Лор/Существа/Чешуйчатые/Саррукхи/Саррукхи.md|Саррукхи]]
-- [[content/Лор/Организации/Врата Бальдура/Свита Леди.md|Свита Леди]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Совет Четырёх.md|Совет Четырёх]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md|Статуя Возлюбленного Странника]]
-- [[content/Лор/Локации/Тетир.md|Тетир]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Три старых бочонка (заполнить).md|Три старых бочонка (заполнить)]]
-- [[content/Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md|Управляющий Портом]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Форт Белуариан (заполнить).md|Форт Белуариан (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал.md|Храмовый квартал]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы/Цитадель Дозора (заполнить).md|Цитадель Дозора (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Общие локации/Чионтар (заполнить).md|Чионтар (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шесть Мудрых Механиков (заполнить).md|Шесть Мудрых Механиков (заполнить)]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md|Ширь]]
-- [[content/Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шлем и Плащ (заполнить).md|Шлем и Плащ (заполнить)]]
-- [[content/Лор/Существа/Чешуйчатые/Юань-ти.md|Юань-ти]]
+- [[Лор/Организации/Альянс лордов.md|Альянс лордов]]
+- [[Лор/Локации/Врата Бальдура/Общие локации/Бальдурские Ворота (заполнить).md|Бальдурские Ворота (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Башня Рамазита (заполнить).md|Башня Рамазита (заполнить)]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md|Быт юань-ти]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md|Верхний город]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md|Верховный Констебль и Мастер над стенами (заполнить)]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md|Виды юань-ти]]
+- [[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md|Внешний город (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Нижний город/Восточный Путь (заполнить).md|Восточный Путь (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Врата Бальдура.md|Врата Бальдура]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Дом Чудес (заполнить).md|Высший Дом Чудес (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md|Высший Зал]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Вьющийся Заговор.md|Вьющийся Заговор]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Герои Шири (заполнить).md|Герои Шири (заполнить)]]
+- [[Лор/Организации/Врата Бальдура/Гильдия.md|Гильдия]]
+- [[Лор/Организации/Врата Бальдура/Дозор.md|Дозор]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Дженестас.md|Дом Дженестас]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Саурингар.md|Дом Саурингар]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Се'Сехен.md|Дом Се'Сехен]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Ссерадесс.md|Дом Ссерадесс]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md|Дом Хсс'тафи]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Экстаминос.md|Дом Экстаминос]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Эселемас.md|Дом Эселемас]]
+- [[Лор/Организации/Жентарим.md|Жентарим]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Законы.md|Законы]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md|Зал Чудес]]
+- [[Лор/Существа/Иллитиды.md|Иллитиды]]
+- [[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md|Корабль Аларика]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы (заполнить).md|Крепостные Улицы (заполнить)]]
+- [[Лор/Артефакты/Криншинибон.md|Криншинибон]]
+- [[Лор/Организации/Легион Смерти.md|Легион Смерти]]
+- [[Лор/Локации/Лускан.md|Лускан]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Водными и Подземными Путями.md|Мастер над Водными и Подземными Путями]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md|Мастер над Монетой]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Мостовыми (заполнить).md|Мастер над Мостовыми (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Общие локации/Морская Башня Бальдурана (заполнить).md|Морская Башня Бальдурана (заполнить)]]
+- [[Лор/Локации/Невервинтер.md|Невервинтер]]
+- [[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md|Нижний город (заполнить)]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md|Общество юань-ти]]
+- [[Лор/Локации/Острова Муншае.md|Острова Муншае]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Парламент Пэров.md|Парламент Пэров]]
+- [[Лор/Локации/Поместье Рейвентри.md|Поместье Рейвентри]]
+- [[Лор/Локации/Врата Бальдура/Общие локации/Порт Ньянзару (заполнить).md|Порт Ньянзару (заполнить)]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Порядок.md|Порядок]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Правительство Врат Бальдура.md|Правительство Врат Бальдура]]
+- [[Лор/События/Праздник Высокого Урожая.md|Праздник Высокого Урожая]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Пристав Шири.md|Пристав Шири]]
+- [[Лор/Организации/Врата Бальдура/Пылающий Кулак.md|Пылающий Кулак]]
+- [[Лор/Существа/Чешуйчатые/Саррукхи/Расовая история саррукхов.md|Расовая история саррукхов]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Расовая история юань-ти.md|Расовая история юань-ти]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Родовые поместья (заполнить).md|Родовые поместья (заполнить)]]
+- [[Лор/Организации/Культы/Рыцари Щита.md|Рыцари Щита]]
+- [[Лор/Существа/Чешуйчатые/Саррукхи/Саррукхи.md|Саррукхи]]
+- [[Лор/Организации/Врата Бальдура/Свита Леди.md|Свита Леди]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Совет Четырёх.md|Совет Четырёх]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md|Статуя Возлюбленного Странника]]
+- [[Лор/Локации/Тетир.md|Тетир]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Три старых бочонка (заполнить).md|Три старых бочонка (заполнить)]]
+- [[Лор/Организации/Врата Бальдура/Правительство/Управляющий Портом.md|Управляющий Портом]]
+- [[Лор/Локации/Врата Бальдура/Общие локации/Форт Белуариан (заполнить).md|Форт Белуариан (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал.md|Храмовый квартал]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Крепостные Улицы/Цитадель Дозора (заполнить).md|Цитадель Дозора (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Общие локации/Чионтар (заполнить).md|Чионтар (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шесть Мудрых Механиков (заполнить).md|Шесть Мудрых Механиков (заполнить)]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md|Ширь]]
+- [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Шлем и Плащ (заполнить).md|Шлем и Плащ (заполнить)]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти.md|Юань-ти]]
